<resources>
<string name="common_google_play_services_notification_ticker">Google Play services error</string>
<string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
<string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
<string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
<string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
<string name="common_google_play_services_install_title">Get Google Play services</string>
<string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
<string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
<string name="common_google_play_services_install_button">Get Google Play services</string>
<string name="common_google_play_services_enable_title">Enable Google Play services</string>
<string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
<string name="common_google_play_services_enable_button">Enable Google Play services</string>
<string name="common_google_play_services_update_title">Update Google Play services</string>
<string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
<string name="common_google_play_services_network_error_title">Network Error</string>
<string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
<string name="common_google_play_services_invalid_account_title">Invalid Account</string>
<string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
<string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
<string name="common_google_play_services_unsupported_title">Google Play services</string>
<string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
<string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
<string name="common_google_play_services_update_button">Update</string>
<string name="common_signin_button_text">Sign in</string>
<string name="common_signin_button_text_long">Sign in with Google</string>
<string name="wallet_buy_button_place_holder">Buy with Google</string>
<string name="com.crashlytics.android.build_id">eeb9d683-2429-4923-a830-d680594284c9</string>
<string name="app_name">DroidEdit</string>
<string name="action_bar_file">File</string>
<string name="action_bar_new">New</string>
<string name="action_bar_open">Open</string>
<string name="action_bar_save">Save</string>
<string name="action_bar_save_as">Save as…</string>
<string name="action_bar_close">Close</string>
<string name="action_bar_select_all">Select All</string>
<string name="action_bar_cut">Cut</string>
<string name="action_bar_copy">Copy</string>
<string name="action_bar_indent">Indent Selection</string>
<string name="action_bar_unindent">Unindent Selection</string>
<string name="action_bar_paste">Paste</string>
<string name="action_bar_insert_color">Insert Color</string>
<string name="action_bar_expand">Expand XML</string>
<string name="action_bar_expand_condensed">Expand</string>
<string name="action_bar_undo">Undo</string>
<string name="action_bar_redo">Redo</string>
<string name="action_bar_find_replace">Find/Replace…</string>
<string name="action_bar_goto_line">Goto Line…</string>
<string name="action_bar_force_syntax">Force Syntax…</string>
<string name="action_bar_create_shortcut">Create Shortcut</string>
<string name="action_bar_search_files">Search in Files</string>
<string name="action_bar_read_only">Read Only</string>
<string name="action_bar_writer_mode">Writer Mode</string>
<string name="action_bar_extra_keys">Extra Keys</string>
<string name="action_bar_ask_encoding">Ask for Encoding</string>
<string name="action_bar_settings">Settings…</string>
<string name="action_bar_file_actions">File…</string>
<string name="action_bar_text_actions">Edit…</string>
<string name="action_bar_exit">Exit</string>
<string name="action_bar_git_actions">Git…</string>
<string name="action_bar_git_commit">Commit…</string>
<string name="action_bar_git_push">Push</string>
<string name="action_bar_git_pull">Pull</string>
<string name="action_bar_new_encoding">New (encoding)</string>
<string name="action_bar_open_encoding">Open (encoding)</string>
<string name="action_bar_toggle_document_list">Toggle Document List</string>
<string name="action_bar_duplicate_line">Duplicate Line(s)</string>
<string name="action_bar_delete_line">Delete Line(s)</string>
<string name="action_bar_find_again">Find Again</string>
<string name="action_bar_goto_line_start">Goto Line Start</string>
<string name="action_bar_goto_line_end">Goto Line End</string>
<string name="action_bar_next_tab">Next Document</string>
<string name="action_bar_prev_tab">Previous Document</string>
<string name="theme_background">Background</string>
<string name="theme_normal_text">Normal Text</string>
<string name="theme_reserved_keyword">Reserved Keyword</string>
<string name="theme_data_type">Data Type</string>
<string name="theme_literal">Literal</string>
<string name="theme_variable">Variable</string>
<string name="theme_preprocessor">Preprocessor</string>
<string name="theme_comment">Comment</string>
<string name="theme_parsing_error">Parsing Error</string>
<string name="theme_function">Function</string>
<string name="theme_operator">Operator</string>
<string name="theme_create">Create Theme</string>
<string name="theme_edit">Edit Theme</string>
<string name="theme_custom">custom themes</string>
<string name="theme_select_color">Select Color</string>
<string name="generic_ok">OK</string>
<string name="generic_cancel">Cancel</string>
<string name="generic_yes">Yes</string>
<string name="generic_no">No</string>
<string name="generic_ignore">Ignore</string>
<string name="generic_delete">Delete</string>
<string name="generic_test">Test</string>
<string name="generic_save">Save</string>
<string name="generic_saved">Saved</string>
<string name="generic_create">Create</string>
<string name="generic_close">Close</string>
<string name="generic_not_found">Not found</string>
<string name="generic_reload">Reload</string>
<string name="generic_retry">Retry</string>
<string name="generic_commit">Commit</string>
<string name="generic_loading">Loading…</string>
<string name="find">Find</string>
<string name="find_replace">Replace</string>
<string name="find_replace_all">Replace All</string>
<string name="find_ignore_case">Ignore Case</string>
<string name="find_wrap_around">Wrap Around</string>
<string name="find_regular_expression">Regular Expression</string>
<string name="goto_line">Goto line</string>
<string name="goto_line_number">Enter line number</string>
<string name="goto_line_go">Go</string>
<string name="file_management_overwrite">Overwrite</string>
<string name="file_management_close_file_warning">File has unsaved changes. Really close file?</string>
<string name="file_management_file_exists">File Exists</string>
<string name="file_management_file_exists_msg">File already exists. Overwrite?</string>
<string name="file_management_file_not_exists_msg">"File doesn't exist."</string>
<string name="file_management_close_file">Close File</string>
<string name="file_management_open_file">Open File</string>
<string name="file_management_save_file">Save File</string>
<string name="file_management_choose_filesystem">Choose File System</string>
<string name="file_management_new_file">New File</string>
<string name="file_management_select_encoding">Select encoding</string>
<string name="file_management_file_changed">File Changed</string>
<string name="file_management_file_changed_on_disk">File $file$ changed on disk. Reload?</string>
<string name="file_management_file_changed_on_dropbox">File $file$ changed on DropBox. Reload?</string>
<string name="file_management_file_changed_on_box">File $file$ changed on Box. Reload?</string>
<string name="file_management_add_folder">Create Folder</string>
<string name="remote_open_sftp_file">Open Remote File</string>
<string name="remote_save_sftp_file">Save Remote File</string>
<string name="remote_connection_successful">Connection successful</string>
<string name="remote_public_key_auth">Public Key Authentication</string>
<string name="remote_password_auth">Password Authentication</string>
<string name="remote_connecting">Connection to Server</string>
<string name="remote_establishing_connection">Establishing Connection</string>
<string name="remote_login">Login</string>
<string name="remote_open_dropbox_file">Open Dropbox File</string>
<string name="remote_save_dropbox_file">Save Dropbox File</string>
<string name="remote_dropbox_connection_successful">Connection to Dropbox successful</string>
<string name="remote_dropbox_connection_failed">Error authenticating with Dropbox</string>
<string name="remote_open_box_file">Open Box File</string>
<string name="remote_save_box_file">Save Box File</string>
<string name="remote_box_connection_successful">Connection to Box successful</string>
<string name="remote_box_connection_failed">Error authenticating with Box</string>
<string name="error_save_failed">Save Failed</string>
<string name="error_save_failed_msg">Failed to save file</string>
<string name="error_open_failed">Open Failed</string>
<string name="error_open_failed_msg">Failed to open file</string>
<string name="error_file_too_big_msg">File too big</string>
<string name="error_download_failed">Download Failed</string>
<string name="error_download_failed_msg">Failed to download file</string>
<string name="error_auth_failed_msg">Failed to authenticate with server</string>
<string name="error_upload_failed">Upload Failed</string>
<string name="error_upload_failed_msg">Failed to upload file</string>
<string name="error_connecting">Error connecting to server</string>
<string name="error_authenticating">Authentication failed</string>
<string name="error_invalid_key">Invalid Private Key</string>
<string name="error_dropbox_unlinked_msg">Dropbox account unlinked. Try again and renew authorization.</string>
<string name="error_box_unlinked_msg">Box account unlinked. Try again and renew authorization.</string>
<string name="error_permission_denied_msg">Permission denied</string>
<string name="error_color">Invalid color</string>
<string name="error_unknown">Unknown error</string>
<string name="error_opening">Error opening file</string>
<string name="error_market">Error opening Android Market</string>
<string name="error_not_in_initial_folder">"File isn't inside server initial folder"</string>
<string name="error_no_initial_folder">"Server doesn't have an initial folder"</string>
<string name="error_no_base_url">"Server doesn't have a base URL"</string>
<string name="error_failed_open_browser">Failed to Open Browser</string>
<string name="external_preview_broser">Preview in Browser</string>
<string name="external_run_in_sl4a_terminal">Run in SL4A (Terminal)</string>
<string name="external_run_in_sl4a_background">Run in SL4A (Background)</string>
<string name="external_send_file">Share File…</string>
<string name="external_run_external">Run External Command…</string>
<string name="pref_help">Help…</string>
</resources>