<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/RelativeLayout1" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/linearLayout" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
		<LinearLayout android:orientation="vertical" android:id="@id/style_list" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:typeface="monospace" android:id="@id/theme_color_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_background" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_normal_text" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_2" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_reserved_keyword" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_3" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_data_type" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_4" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_literal" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_5" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_variable" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_6" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_preprocessor" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_7" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_comment" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_8" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_parsing_error" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_9" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_function" />
			<TextView android:typeface="monospace" android:id="@id/theme_color_10" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/theme_operator" />
		</LinearLayout>
	</ScrollView>
	<LinearLayout android:orientation="horizontal" android:id="@id/linearLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
		<Button android:id="@id/button_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/generic_ok" android:layout_weight="1.0" />
		<Button android:id="@id/button_delete" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/generic_delete" android:layout_weight="1.0" />
		<Button android:id="@id/button_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/generic_cancel" android:layout_weight="1.0" />
	</LinearLayout>
</RelativeLayout>
