<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@id/RelativeLayout1" android:background="#ff111111" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip">
	<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LinearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<EditText android:id="@id/findEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/find" android:selectAllOnFocus="true" android:layout_weight="1.0" android:inputType="textVisiblePassword|textNoSuggestions" android:imeOptions="actionSearch|flagNoExtractUi">
			<requestFocus />
		</EditText>
		<EditText android:id="@id/replaceEdit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/find_replace" android:selectAllOnFocus="true" android:layout_weight="1.0" android:inputType="textVisiblePassword|textNoSuggestions" android:imeOptions="actionNone|flagNoExtractUi" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/LinearLayout1">
		<ToggleButton android:textSize="12.0sp" android:id="@id/checkBoxWrap" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:textOn="" android:textOff="" android:drawableTop="@drawable/wraparound" android:layout_weight="1.0" android:contentDescription="@string/find_wrap_around" />
		<ToggleButton android:textSize="12.0sp" android:id="@id/checkBoxRegularExpression" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textOn="" android:textOff="" android:drawableTop="@drawable/regexp" android:layout_weight="1.0" android:contentDescription="@string/find_regular_expression" />
		<ToggleButton android:textSize="12.0sp" android:id="@id/checkBoxIgnoreCase" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textOn="" android:textOff="" android:drawableTop="@drawable/ignorecase" android:layout_weight="1.0" android:contentDescription="@string/find_ignore_case" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/ad_bottom_padding" android:layout_alignParentBottom="true">
		<ImageButton android:id="@id/findButton" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/find" android:layout_weight="1.0" android:contentDescription="@string/find" />
		<ImageButton android:enabled="false" android:id="@id/replaceButton" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/replace" android:layout_weight="1.0" android:contentDescription="@string/find_replace" />
		<ImageButton android:id="@id/replaceAllButton" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/replace_all" android:layout_weight="1.0" android:contentDescription="@string/find_replace_all" />
	</LinearLayout>
</RelativeLayout>
